LAB4/RelationalLangParser.py
# Generated from RelationalLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RelationalLangParser ( Parser ):

    grammarFileName = "RelationalLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'('", "')'", "','", "'{'", "'}'", 
                     "'if'", "'then'", "'else'", "'while'", "'until'", "'for'", 
                     "'='", "';'", "'return'", "'['", "']'", "'read'", "'write'", 
                     "'table'", "'find'", "'update'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", 
                     "'&&'", "'||'", "<INVALID>", "'\\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "TYPE", "ID", 
                      "NUMBER", "STRING", "ADD", "SUB", "MUL", "DIV", "MOD", 
                      "EQ", "NEQ", "GT", "LT", "GE", "LE", "AND", "OR", 
                      "WS", "NEWLINE" ]

    RULE_program = 0
    RULE_subprogram = 1
    RULE_params = 2
    RULE_block = 3
    RULE_statement = 4
    RULE_ifStmt = 5
    RULE_whileStmt = 6
    RULE_untilStmt = 7
    RULE_forStmt = 8
    RULE_assignment = 9
    RULE_varName = 10
    RULE_returnStmt = 11
    RULE_expr = 12
    RULE_primary = 13
    RULE_functionCall = 14

    ruleNames =  [ "program", "subprogram", "params", "block", "statement", 
                   "ifStmt", "whileStmt", "untilStmt", "forStmt", "assignment", 
                   "varName", "returnStmt", "expr", "primary", "functionCall" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    TYPE=23
    ID=24
    NUMBER=25
    STRING=26
    ADD=27
    SUB=28
    MUL=29
    DIV=30
    MOD=31
    EQ=32
    NEQ=33
    GT=34
    LT=35
    GE=36
    LE=37
    AND=38
    OR=39
    WS=40
    NEWLINE=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(RelationalLangParser.EOF, 0)

        def subprogram(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RelationalLangParser.SubprogramContext)
            else:
                return self.getTypedRuleContext(RelationalLangParser.SubprogramContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RelationalLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(RelationalLangParser.StatementContext,i)


        def getRuleIndex(self):
            return RelationalLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = RelationalLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 30
                self.subprogram()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2199056587904) != 0):
                self.state = 36
                self.statement()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(RelationalLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubprogramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(RelationalLangParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(RelationalLangParser.BlockContext,0)


        def params(self):
            return self.getTypedRuleContext(RelationalLangParser.ParamsContext,0)


        def getRuleIndex(self):
            return RelationalLangParser.RULE_subprogram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubprogram" ):
                listener.enterSubprogram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubprogram" ):
                listener.exitSubprogram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubprogram" ):
                return visitor.visitSubprogram(self)
            else:
                return visitor.visitChildren(self)




    def subprogram(self):

        localctx = RelationalLangParser.SubprogramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_subprogram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(RelationalLangParser.T__0)
            self.state = 45
            self.match(RelationalLangParser.ID)
            self.state = 46
            self.match(RelationalLangParser.T__1)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 47
                self.params()


            self.state = 50
            self.match(RelationalLangParser.T__2)
            self.state = 51
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(RelationalLangParser.ID)
            else:
                return self.getToken(RelationalLangParser.ID, i)

        def getRuleIndex(self):
            return RelationalLangParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = RelationalLangParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(RelationalLangParser.ID)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 54
                self.match(RelationalLangParser.T__3)
                self.state = 55
                self.match(RelationalLangParser.ID)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RelationalLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(RelationalLangParser.StatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(RelationalLangParser.NEWLINE)
            else:
                return self.getToken(RelationalLangParser.NEWLINE, i)

        def getRuleIndex(self):
            return RelationalLangParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = RelationalLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(RelationalLangParser.T__4)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2199056587904) != 0):
                self.state = 64
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 62
                    self.statement()
                    pass

                elif la_ == 2:
                    self.state = 63
                    self.match(RelationalLangParser.NEWLINE)
                    pass


                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.match(RelationalLangParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStmt(self):
            return self.getTypedRuleContext(RelationalLangParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(RelationalLangParser.WhileStmtContext,0)


        def untilStmt(self):
            return self.getTypedRuleContext(RelationalLangParser.UntilStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(RelationalLangParser.ForStmtContext,0)


        def assignment(self):
            return self.getTypedRuleContext(RelationalLangParser.AssignmentContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(RelationalLangParser.FunctionCallContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(RelationalLangParser.ReturnStmtContext,0)


        def NEWLINE(self):
            return self.getToken(RelationalLangParser.NEWLINE, 0)

        def getRuleIndex(self):
            return RelationalLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = RelationalLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.ifStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.whileStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.untilStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 74
                self.forStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 75
                self.assignment()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 76
                self.functionCall()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 77
                self.returnStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 78
                self.match(RelationalLangParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(RelationalLangParser.ExprContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RelationalLangParser.BlockContext)
            else:
                return self.getTypedRuleContext(RelationalLangParser.BlockContext,i)


        def getRuleIndex(self):
            return RelationalLangParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = RelationalLangParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(RelationalLangParser.T__6)
            self.state = 82
            self.expr(0)
            self.state = 83
            self.match(RelationalLangParser.T__7)
            self.state = 84
            self.block()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 85
                self.match(RelationalLangParser.T__8)
                self.state = 86
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(RelationalLangParser.ExprContext,0)


        def block(self):
            return self.getTypedRuleContext(RelationalLangParser.BlockContext,0)


        def getRuleIndex(self):
            return RelationalLangParser.RULE_whileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = RelationalLangParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(RelationalLangParser.T__9)
            self.state = 90
            self.expr(0)
            self.state = 91
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UntilStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(RelationalLangParser.ExprContext,0)


        def block(self):
            return self.getTypedRuleContext(RelationalLangParser.BlockContext,0)


        def getRuleIndex(self):
            return RelationalLangParser.RULE_untilStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUntilStmt" ):
                listener.enterUntilStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUntilStmt" ):
                listener.exitUntilStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUntilStmt" ):
                return visitor.visitUntilStmt(self)
            else:
                return visitor.visitChildren(self)




    def untilStmt(self):

        localctx = RelationalLangParser.UntilStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_untilStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(RelationalLangParser.T__10)
            self.state = 94
            self.expr(0)
            self.state = 95
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(RelationalLangParser.ID, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RelationalLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(RelationalLangParser.ExprContext,i)


        def assignment(self):
            return self.getTypedRuleContext(RelationalLangParser.AssignmentContext,0)


        def block(self):
            return self.getTypedRuleContext(RelationalLangParser.BlockContext,0)


        def getRuleIndex(self):
            return RelationalLangParser.RULE_forStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStmt" ):
                return visitor.visitForStmt(self)
            else:
                return visitor.visitChildren(self)




    def forStmt(self):

        localctx = RelationalLangParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_forStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(RelationalLangParser.T__11)
            self.state = 98
            self.match(RelationalLangParser.ID)
            self.state = 99
            self.match(RelationalLangParser.T__12)
            self.state = 100
            self.expr(0)
            self.state = 101
            self.match(RelationalLangParser.T__13)
            self.state = 102
            self.expr(0)
            self.state = 103
            self.match(RelationalLangParser.T__13)
            self.state = 104
            self.assignment()
            self.state = 105
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varName(self):
            return self.getTypedRuleContext(RelationalLangParser.VarNameContext,0)


        def expr(self):
            return self.getTypedRuleContext(RelationalLangParser.ExprContext,0)


        def getRuleIndex(self):
            return RelationalLangParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = RelationalLangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.varName()
            self.state = 108
            self.match(RelationalLangParser.T__12)
            self.state = 109
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(RelationalLangParser.ID, 0)

        def TYPE(self):
            return self.getToken(RelationalLangParser.TYPE, 0)

        def getRuleIndex(self):
            return RelationalLangParser.RULE_varName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarName" ):
                listener.enterVarName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarName" ):
                listener.exitVarName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarName" ):
                return visitor.visitVarName(self)
            else:
                return visitor.visitChildren(self)




    def varName(self):

        localctx = RelationalLangParser.VarNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_varName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            _la = self._input.LA(1)
            if not(_la==23 or _la==24):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(RelationalLangParser.ExprContext,0)


        def getRuleIndex(self):
            return RelationalLangParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = RelationalLangParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(RelationalLangParser.T__14)
            self.state = 114
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(RelationalLangParser.TYPE, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RelationalLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(RelationalLangParser.ExprContext,i)


        def primary(self):
            return self.getTypedRuleContext(RelationalLangParser.PrimaryContext,0)


        def MUL(self):
            return self.getToken(RelationalLangParser.MUL, 0)

        def DIV(self):
            return self.getToken(RelationalLangParser.DIV, 0)

        def MOD(self):
            return self.getToken(RelationalLangParser.MOD, 0)

        def ADD(self):
            return self.getToken(RelationalLangParser.ADD, 0)

        def SUB(self):
            return self.getToken(RelationalLangParser.SUB, 0)

        def EQ(self):
            return self.getToken(RelationalLangParser.EQ, 0)

        def NEQ(self):
            return self.getToken(RelationalLangParser.NEQ, 0)

        def GT(self):
            return self.getToken(RelationalLangParser.GT, 0)

        def LT(self):
            return self.getToken(RelationalLangParser.LT, 0)

        def GE(self):
            return self.getToken(RelationalLangParser.GE, 0)

        def LE(self):
            return self.getToken(RelationalLangParser.LE, 0)

        def AND(self):
            return self.getToken(RelationalLangParser.AND, 0)

        def OR(self):
            return self.getToken(RelationalLangParser.OR, 0)

        def getRuleIndex(self):
            return RelationalLangParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = RelationalLangParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 117
                self.match(RelationalLangParser.T__1)
                self.state = 118
                self.match(RelationalLangParser.TYPE)
                self.state = 119
                self.match(RelationalLangParser.T__2)
                self.state = 120
                self.expr(7)
                pass

            elif la_ == 2:
                self.state = 121
                self.match(RelationalLangParser.T__1)
                self.state = 122
                self.expr(0)
                self.state = 123
                self.match(RelationalLangParser.T__2)
                pass

            elif la_ == 3:
                self.state = 125
                self.primary()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 142
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 140
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = RelationalLangParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 128
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 129
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3758096384) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 130
                        self.expr(6)
                        pass

                    elif la_ == 2:
                        localctx = RelationalLangParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 131
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 132
                        _la = self._input.LA(1)
                        if not(_la==27 or _la==28):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 133
                        self.expr(5)
                        pass

                    elif la_ == 3:
                        localctx = RelationalLangParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 134
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 135
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 270582939648) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 136
                        self.expr(4)
                        pass

                    elif la_ == 4:
                        localctx = RelationalLangParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 137
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 138
                        _la = self._input.LA(1)
                        if not(_la==38 or _la==39):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 139
                        self.expr(3)
                        pass

             
                self.state = 144
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
